[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5", features = ["rustls-0_22"] }
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
thiserror = "1.0"
env_logger = "0.11"

sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "mysql", "chrono", "uuid"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

uuid = { version = "1", features = ["v4", "serde"] }

# TLS (HTTPS)
rustls = "0.22"
rustls-pemfile = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
